-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.11.0, Lustre 2.12.0, Lustre 2.10.5
-
None
-
Any LNet setup
-
3
-
9223372036854775807
While porting the Multi-Rail work to the linux lustre client a bug exposed itself that is in the OpenSFS branch but yet has not shown up yet. The wrong size is used to copy the cpts to net_cpts which causes the follow crash:
RIP: 0010:lnet_match2mt.isra.8+0x2b/0x40 [lnet]
2018-09-14 21:49:43 [ 4076.107190] Code: 66 66 66 90 83 3d 4c 9e 02 00 01 74 23 31 c0 f6 47 08 02 75 01 c3 48 89 f2 53 48 8b 5f 30
31 f6 48 89 d7 e8 77 3c ff ff 48 98 <48> 8b 04 c3 5b c3 48 8b 47 30 48 8b 00 c3 0f 1f 80 00 00 00 00 66
2018-09-14 21:49:43 [ 4076.128243] RSP: 0018:ffffc9000fc27b90 EFLAGS: 00010286
2018-09-14 21:49:43 [ 4076.134580] RAX: 000000001d5677f8 RBX: ffff88104a417e70 RCX: 000000000000003f
2018-09-14 21:49:43 [ 4076.142817] RDX: 0000000000000001 RSI: 0000000000000001 RDI: 00000000ffffffff
2018-09-14 21:49:43 [ 4076.151028] RBP: ffffc9000fc27bc8 R08: 0000000000000001 R09: 0000000000000001
2018-09-14 21:49:43 [ 4076.159219] R10: 0000000000000000 R11: ffffc9000fc27a88 R12: 0000000000000001
2018-09-14 21:49:43 [ 4076.167398] R13: 0000000000000001 R14: ffff8808581c1060 R15: ffff88104ca21200
2018-09-14 21:49:43 [ 4076.175565] lnet_mt_of_attach+0x72/0x1b0 [lnet]
2018-09-14 21:49:43 [ 4076.181190] LNetMEAttach+0x60/0x1f0 [lnet]
2018-09-14 21:49:43 [ 4076.186388] ptl_send_rpc+0x26f/0xbb0 [ptlrpc]
2018-09-14 21:49:43 [ 4076.191812] ? libcfs_debug_msg+0x57/0x80 [libcfs]
2018-09-14 21:49:43 [ 4076.197604] ptlrpc_send_new_req+0x4c9/0x860 [ptlrpc]
2018-09-14 21:49:43 [ 4076.203653] ptlrpc_check_set.part.21+0x855/0x18b0 [ptlrpc]
2018-09-14 21:49:43 [ 4076.210209] ? try_to_del_timer_sync+0x4d/0x80
2018-09-14 21:49:43 [ 4076.215640] ? del_timer_sync+0x35/0x40
2018-09-14 21:49:43 [ 4076.220462] ptlrpcd_check+0x3ae/0x3f0 [ptlrpc]
2018-09-14 21:49:43 [ 4076.225972] ptlrpcd+0x2be/0x320 [ptlrpc]
2018-09-14 21:49:43 [ 4076.230930] ? wait_woken+0x80/0x80
- is related to
-
LU-13235 Fix wrong size in lnet_net_append_cpts
-
- Resolved
-